Add kitty scrollback for visual selection yank

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -50,3 +50,15 @@ color16 #ff9e64
 color17 #db4b4b
 
 font_size 13.0
+
+
+# Visual Selection
+allow_remote_control socket-only
+listen_on unix:/tmp/kitty
+shell_integration enabled
+
+# kitty-scrollback.nvim Kitten alias
+action_alias kitty_scrollback_nvim kitten /home/mori/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+
+# Browse scrollback buffer in nvim
+map kitty_mod+h kitty_scrollback_nvim
