--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -127,7 +127,7 @@ previewers = [
 	{ mime = "application/x-subrip", run = "code" },
 	{ mime = "application/{mbox,javascript,wine-extension-ini}", run = "code" },
 	# JSON
-	{ mime = "application/{json,ndjson}", run = "json" },
+	{ mime = "application/{json,ndjson}", run = "code" },
 	# Image
 	{ mime = "image/{avif,hei?,jxl}", run = "magick" },
 	{ mime = "image/svg+xml", run = "svg" },
