--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -130,6 +130,7 @@ keymap = [
 	{ on = [ "g", "w" ],       run = "cd ~/Personal/Writing",   desc = "Go ~/Personal/Writing" },
 	{ on = [ "g", "q" ],       run = "cd ~/Personal/Writings",   desc = "Go ~/Personal/Writings" },
 	{ on = [ "g", "W" ],       run = "cd ~/Work/Tupay",   desc = "Go ~/Work/Tupay" },
+	{ on = [ "g", "D" ],       run = "cd ~/Work/distro/",   desc = "Go ~/Work/distro" },
 	{ on = [ "g", "s" ],       run = "cd ~/Learning",   desc = "Go ~/Learning" },
 	{ on = [ "g", "b" ],       run = "cd ~/dotfiles/config/bookmarks/",   desc = "Go to Bookmarks" },
 	{ on = [ "g", "<Space>" ], run = "cd --interactive", desc = "Jump interactively" },
