--- a/config/yazi/yazi.toml
+++ b/config/yazi/yazi.toml
@@ -64,6 +64,7 @@ rules = [
 	# Text
 	{ mime = "text/*", use = [ "edit", "reveal" ] },
 	{ mime = "application/x-subrip", use = [ "edit", "reveal" ] },
+	{ mime = "application/vnd.sqlite3", use = [ "edit", "reveal" ] },
 	# Image
 	{ mime = "image/*", use = [ "open", "reveal" ] },
 	# Media
@@ -98,6 +99,7 @@ spotters = [
 	{ mime = "text/*", run = "code" },
 	{ mime = "application/x-subrip", run = "code" },
 	{ mime = "application/{mbox,javascript,wine-extension-ini}", run = "code" },
+	{ mime = "application/vnd.sqlite3", run = "code" },
 	# Image
 	{ mime = "image/{avif,hei?,jxl}", run = "magick" },
 	{ mime = "image/svg+xml", run = "svg" },
@@ -126,6 +128,7 @@ previewers = [
 	{ mime = "text/*", run = "code" },
 	{ mime = "application/x-subrip", run = "code" },
 	{ mime = "application/{mbox,javascript,wine-extension-ini}", run = "code" },
+	{ mime = "application/vnd.sqlite3", run = "code" },
 	# JSON
 	{ mime = "application/{json,ndjson}", run = "code" },
 	# Image
