--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -131,6 +131,7 @@ keymap = [
 	{ on = [ "g", "q" ],       run = "cd ~/Personal/Writings",   desc = "Go ~/Personal/Writings" },
 	{ on = [ "g", "W" ],       run = "cd ~/Work/Tupay",   desc = "Go ~/Work/Tupay" },
 	{ on = [ "g", "D" ],       run = "cd ~/Work/distro/",   desc = "Go ~/Work/distro" },
+	{ on = [ "g", "n" ],       run = "cd '~/Work/Bachelor Thesis'",   desc = "Skripsi" },
 	{ on = [ "g", "s" ],       run = "cd ~/Study",   desc = "Go ~/Study" },
 	{ on = [ "g", "b" ],       run = "cd ~/dotfiles/config/bookmarks/",   desc = "Go to Bookmarks" },
 	{ on = [ "g", "<Space>" ], run = "cd --interactive", desc = "Jump interactively" },
