Add shortcuts to yazi

--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -132,6 +132,9 @@ keymap = [
 	{ on = [ "g", "W" ],       run = "cd ~/Work/Tupay",   desc = "Go ~/Work/Tupay" },
 	{ on = [ "g", "D" ],       run = "cd ~/Work/distro/",   desc = "Go ~/Work/distro" },
 	{ on = [ "g", "n" ],       run = "cd '~/Work/Bachelor Thesis'",   desc = "Skripsi" },
+	{ on = [ "g", "8" ],       run = "cd '~/University/Sem8'",   desc = "Semester 8" },
+	{ on = [ "g", "7" ],       run = "cd '~/University/Sem7'",   desc = "Semester 7" },
+	{ on = [ "g", "6" ],       run = "cd '~/University/Sem6'",   desc = "Semester 6" },
 	{ on = [ "g", "s" ],       run = "cd ~/Study",   desc = "Go ~/Study" },
 	{ on = [ "g", "b" ],       run = "cd ~/dotfiles/config/bookmarks/",   desc = "Go to Bookmarks" },
 	{ on = [ "g", "<Space>" ], run = "cd --interactive", desc = "Jump interactively" },
